# workout-logger-planner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml  tmp-test.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_manual_override.py
apps/api/app/: __init__.py  bootstrap.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: analytics.py  auth.py  blocks.py  exercises.py  planned_workouts.py  sessions.py  templates.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: all_models.py  entities.py
apps/api/app/schemas/: common.py  domain.py
apps/api/app/services/: analytics.py  auth.py  bootstrap.py  planning.py  progression.py
apps/api/tests/: conftest.py  test_api.py  test_progression.py
apps/api/workout_tracker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx
apps/web/src/components/: AppShell.tsx  Card.tsx  Page.tsx  QueryBoundary.tsx
apps/web/src/features/analytics/: AnalyticsPage.tsx
apps/web/src/features/auth/: LoginPage.tsx
apps/web/src/features/blocks/: BlocksPage.tsx
apps/web/src/features/calendar/: CalendarPage.tsx
apps/web/src/features/session/: SessionPage.tsx
apps/web/src/styles/: global.css
infra/: render.yaml
tasks/: lessons.md  todo.md
(+7 files in other folders)
