[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-tracker-api"
version = "0.1.0"
description = "Personal training tracker API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<0.116",
  "gunicorn>=23.0,<24.0",
  "itsdangerous>=2.2,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "sqlalchemy>=2.0.36,<3.0",
  "starlette>=0.41,<0.42",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
